--- a/tp.css
+++ b/tp.css
@@ -92,7 +92,7 @@ input[type="submit"] {
     flex-direction : column;
 }
 
-h5, .error, #content_profil input {
+h5, .error, #content_profil input, #file {
 
     width:30%;
     margin :auto;
@@ -121,6 +121,8 @@ h5, .error, #content_profil input {
     height: 40%;
     margin: 2px;
     background-color:white;
+    display:flex;
+    flex-direction:column;
 }
 
 .article p, .article h4 {
@@ -144,11 +146,20 @@ h5, .error, #content_profil input {
     text-align:center;
     height:80px;
     width:100%;
+    margin:0;
+}
+.image {
+    height:20%;
+    width:90%;
+    text-align : center;
+    vertical-align: middle;
+    margin:10px;
 }
 
 #error_article, #confirm_profil {
     color: red;
     display: block;
+    text-align:center;
 }
 
 
@@ -160,7 +171,7 @@ h5, .error, #content_profil input {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: black;
+    background-color: rgb(27, 26, 26);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -177,6 +188,9 @@ h5, .error, #content_profil input {
     color: white;
 }
 
+ul {
+    list-style-type: none;
+}
 .navigation .close:hover:after {
 
     text-align:center;
