--- a/tp.css
+++ b/tp.css
@@ -132,6 +132,8 @@ h5, .error, #content_profil input, #file {
 .article h4 {
     overflow: auto;
     hyphens: auto;
+    margin-top:10px;
+    margin-bottom :10px;
 }
 
 .article span {
@@ -144,22 +146,29 @@ h5, .error, #content_profil input, #file {
     overflow: auto;
     hyphens: auto;
     text-align:center;
-    height:80px;
+    height:50px;
     width:100%;
     margin:0;
 }
 .image {
-    height:20%;
+    height:100px;
     width:90%;
     text-align : center;
     vertical-align: middle;
     margin:10px;
 }
 
-#error_article, #confirm_profil {
+#confirm_profil {
     color: red;
     display: block;
     text-align:center;
+}
+
+#error_article {
+    color: red;
+    display:none;
+    text-align: center;
+
 }
 
 
@@ -173,7 +182,7 @@ h5, .error, #content_profil input, #file {
     left: 0;
     background-color: rgb(27, 26, 26);
     overflow-x: hidden;
-    transition: 0.5s;
+    transition: 0.3s;
     padding-top: 60px;
 }
 
